--- a/development/my_portfolio/src/index.css
+++ b/development/my_portfolio/src/index.css
@@ -1,13 +1,28 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Courier New, monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: Volkhov, -apple-system, sans-serif;
+
+}
+
+/*
+// font-family: 'Bellota', cursive;
+// font-family: 'Fugaz One', cursive;
+// font-family: 'Harmattan', sans-serif;
+// font-family: 'Inknut Antiqua', serif;
+// font-family: 'Inter', sans-serif;
+// font-family: 'Montserrat', sans-serif;
+// font-family: 'Shizuru', cursive;
+// font-family: 'Titan One', cursive;
+// font-family: 'Volkhov', serif; 
+*/
