--- a/development/my_portfolio/src/index.css
+++ b/development/my_portfolio/src/index.css
@@ -11,7 +11,7 @@ code {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: Volkhov, -apple-system, sans-serif;
+  font-family: Harmattan, -apple-system, sans-serif;
 
 }
 
