styles: Header 90% defined, Palette color Defined, Nav side started

--- a/development/my_portfolio/src/index.css
+++ b/development/my_portfolio/src/index.css
@@ -11,18 +11,22 @@ code {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: Harmattan, -apple-system, sans-serif;
+  font-family: Merriweather Sans, -apple-system, sans-serif;
 
 }
 
 /*
-// font-family: 'Bellota', cursive;
-// font-family: 'Fugaz One', cursive;
-// font-family: 'Harmattan', sans-serif;
-// font-family: 'Inknut Antiqua', serif;
-// font-family: 'Inter', sans-serif;
-// font-family: 'Montserrat', sans-serif;
-// font-family: 'Shizuru', cursive;
-// font-family: 'Titan One', cursive;
-// font-family: 'Volkhov', serif; 
+font-family: 'Anton', sans-serif;
+font-family: 'Bellota', cursive;
+font-family: 'Dosis', sans-serif;
+font-family: 'Fugaz One', cursive;
+font-family: 'Gowun Dodum', sans-serif;
+font-family: 'Harmattan', sans-serif;
+font-family: 'Inknut Antiqua', serif;
+font-family: 'Inter', sans-serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Quicksand', sans-serif;
+font-family: 'Shizuru', cursive;
+font-family: 'Titan One', cursive;
+font-family: 'Volkhov', serif;
 */
